project rswag test is added
