# swagger/v1/swagger.yaml
@@ -90,6 +90,16 @@ paths:
               properties:
                 first_name:
                   type: string
+                last_name:
+                  type: string
+                city:
+                  type: string
+                state:
+                  type: string
+                country:
+                  type: string
+                team_id:
+                  type: integer
     delete:
       summary: Delete a member
       tags:
@@ -103,6 +113,95 @@ paths:
       responses:
         '200':
           description: Return member deleted
+  "/api/v1/projects":
+    get:
+      summary: Retrieve all projects
+      tags:
+      - Projects
+      responses:
+        '200':
+          description: Return information based on query
+    post:
+      summary: Creates a project
+      tags:
+      - Projects
+      parameters: []
+      responses:
+        '200':
+          description: Created contact
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+  "/api/v1/projects/{id}":
+    get:
+      summary: Retrieves a project
+      tags:
+      - Projects
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: string
+      responses:
+        '200':
+          description: project found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                required:
+                - id
+            application/xml:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                required:
+                - id
+    put:
+      summary: Update project
+      tags:
+      - Projects
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Updated project
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+    delete:
+      summary: Delete a project
+      tags:
+      - Projects
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Return project deleted
   "/api/v1/teams":
     get:
       summary: Retrieve all teams
